--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "next": "16.0.2-canary.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
@@ -24,6 +26,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^4",
+    "ttf2woff2": "^8.0.0",
     "typescript": "^5"
   }
 }
